Replacing new Integer(value) by Integer.valueOf(value).