@@ -604,7 +604,7 @@ public class RADConnectionPropertyEditor
             } else if ("boolean".equals(typeName)) { // NOI18N
                 return Boolean.valueOf(value);
             } else if ("char".equals(typeName)) { // NOI18N
-                if (value.length() > 0) return new Character(value.charAt(0));
+                if (value.length() > 0) return Character.valueOf(value.charAt(0));
             }
             return FormDesignValue.IGNORED_VALUE;
         } catch (Exception e) {
